--- a/index.html
+++ b/index.html
@@ -2,49 +2,51 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Karla:400,700&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Single Price Grid Component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
-  Join our community
 
-  30-day, hassle-free money back guarantee
+  <main class="main">
+    <div class="grid-container">
+      <div class="grid-component">
+        <h1 class="grid-component__title">Join our community</h1>
+        <h2 class="grid-component__secondary-title">30-day, hassle-free money back guarantee</h2>
+        <p class="grid-component__par">Gain access to our full library of tutorials along with expert code reviews. Perfect for any developers who are serious about honing their skills.</p>
+      </div>
 
-  Gain access to our full library of tutorials along with expert code reviews. 
-  Perfect for any developers who are serious about honing their skills.
+      <div class="grid-component-sub">
+        <h3 class="grid-component-sub__title">Monthly Subscription</h3>
+        <div class="grid-component-sub__price_highlight">&dollar;29<span class="grid-component-sub__price">per month</span></div>
+        <p class="grid-component-sub__par">Full access for less than &dollar;1 a day</p>
+        <button class="grid-component-sub__btn" type="submit">Sign Up</button>
+      </div>
 
-  Monthly Subscription
+      <div class="grid-component-why">
+        <h3 class="grid-component-why__title">Why Us</h3>
+        <ul class="grid-component-why__list">
+          <li class="grid-component-why__list-item">Tutorials by industry experts</li>
+          <li class="grid-component-why__list-item">Peer &amp; expert code review</li>
+          <li class="grid-component-why__list-item">Coding exercises</li>
+          <li class="grid-component-why__list-item">Access to our GitHub repos</li>
+          <li class="grid-component-why__list-item">Community forum</li>
+          <li class="grid-component-why__list-item">Flashcard decks</li>
+          <li class="grid-component-why__list-item">New videos every week</li>
+        </ul>
+      </div>
+    </div>
+  </main>
 
-  &dollar;29 per month
-
-  Full access for less than &dollar;1 a day
-
-  Sign Up
-
-  Why Us
-
-  Tutorials by industry experts
-  Peer &amp; expert code review
-  Coding exercises
-  Access to our GitHub repos
-  Community forum
-  Flashcard decks
-  New videos every week
-  
   <footer>
     <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="https://github.com/sonickonic">sonickonic</a>.
     </p>
   </footer>
+
 </body>
 </html>
